Minor CSS fixes for Sponsor blocks.

--- a/frontend/theme/extras/Sponsors.less
+++ b/frontend/theme/extras/Sponsors.less
@@ -2,6 +2,7 @@
 Sponsors
 --------------------*/
 .ui.container.sponsors {
+  margin-top: 30px;
   text-align: center;
 
   .sponsorLevel {
@@ -59,6 +60,13 @@ Sponsors
       img {
         max-width: 90px;
         max-height: 30px;
+      }
+    }
+
+    &.organizer {
+      img {
+        max-width: 300px;
+        max-height: 100px;
       }
     }
   }
