Person View, fist shot

--- a/frontend/theme/extras/styles.less
+++ b/frontend/theme/extras/styles.less
@@ -49,6 +49,16 @@
     }
   }
 
-  .person-description {
+  .person-activity {
+    margin-bottom: 20px;
+
+    a {
+      color: @textColor;
+    }
+
+    .person-activity-info {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
