New variation 'person' for teasers

--- a/frontend/theme/extras/styles.less
+++ b/frontend/theme/extras/styles.less
@@ -19,7 +19,6 @@
   margin-bottom: 1rem;
 }
 
-
 .person-header {
   display: flex;
 
@@ -61,6 +60,13 @@
       display: flex;
       justify-content: space-between;
     }
+  }
+}
+
+.person.grid-teaser-item {
+  .ui.label.attached {
+    background-color: rgba(255, 255, 255, 0.5);
+    color: @textColor;
   }
 }
 
