--- a/frontend/theme/extras/styles.less
+++ b/frontend/theme/extras/styles.less
@@ -140,4 +140,12 @@ ul.person-social {
   }
 }
 
+#page-edit {
+  .listing-item {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
 @import 'tito';
