--- a/frontend/theme/extras/styles.less
+++ b/frontend/theme/extras/styles.less
@@ -141,10 +141,12 @@ ul.person-social {
 }
 
 #page-edit {
-  .listing-item {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  .persons-simple-listing {
+    .listing-item {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
 
