--- a/frontend/theme/extras/styles.less
+++ b/frontend/theme/extras/styles.less
@@ -206,6 +206,45 @@ ul.person-social {
   }
 }
 
+.talks-listing {
+  .listing-item {
+    margin-bottom: 40px;
+  }
+
+  .listing-item,
+  .listing-item a {
+    width: inherit;
+  }
+
+  h2 {
+    margin-bottom: 0;
+  }
+
+  .listing-image-wrapper {
+    display: flex;
+    width: inherit;
+    align-items: center;
+    margin-left: 20px;
+
+    img {
+      width: 10rem;
+      height: 10rem;
+      border-radius: 50%;
+      object-fit: cover;
+      object-position: top;
+    }
+  }
+
+  .speakers-preview {
+    display: flex;
+  }
+
+  .listing-body .speakers-by {
+    font-size: 90% !important;
+    font-style: italic;
+  }
+}
+
 #page-edit {
   .persons-simple-listing {
     .listing-item {
