Fix talks listings

--- a/frontend/theme/extras/styles.less
+++ b/frontend/theme/extras/styles.less
@@ -211,9 +211,8 @@ ul.person-social {
     margin-bottom: 40px;
   }
 
-  .listing-item,
   .listing-item a {
-    width: inherit;
+    justify-content: space-between;
   }
 
   h2 {
@@ -222,7 +221,6 @@ ul.person-social {
 
   .listing-image-wrapper {
     display: flex;
-    width: inherit;
     align-items: center;
     margin-left: 20px;
 
@@ -242,6 +240,10 @@ ul.person-social {
   .listing-body .speakers-by {
     font-size: 90% !important;
     font-style: italic;
+  }
+
+  .listing-item.too-many-speakers a {
+    flex-direction: column;
   }
 }
 
