--- a/frontend/theme/extras/styles.less
+++ b/frontend/theme/extras/styles.less
@@ -22,6 +22,19 @@
 .person-header {
   display: flex;
 
+  @media only screen and (max-width: (@largestMobileScreen)) {
+    flex-direction: column;
+
+    .person-image-wrapper {
+      display: flex;
+      justify-content: center;
+    }
+
+    .person-content {
+      margin-top: 20px;
+    }
+  }
+
   img {
     width: 17rem;
     height: 17rem;
@@ -29,6 +42,10 @@
     border-radius: 50%;
     object-fit: cover;
     object-position: top;
+
+    @media only screen and (max-width: (@largestMobileScreen)) {
+      margin-right: 0;
+    }
   }
 
   ul {
@@ -144,6 +161,18 @@ ul.person-social {
   display: flex;
   justify-content: space-between;
 
+  @media only screen and (max-width: (@largestMobileScreen)) {
+    flex-direction: column;
+
+    .speaker-image-wrapper {
+      margin-top: 10px;
+    }
+
+    .listing-item a {
+      align-items: center;
+    }
+  }
+
   img {
     width: 17rem;
     height: 17rem;
@@ -173,6 +202,10 @@ ul.person-social {
 
   .talk-content {
     margin-right: 60px;
+
+    @media only screen and (max-width: (@largestMobileScreen)) {
+      margin-right: 0;
+    }
   }
 
   .talk-targets {
@@ -210,6 +243,13 @@ ul.person-social {
 .talks-listing {
   .listing-item {
     margin-bottom: 40px;
+
+    @media only screen and (max-width: (@largestMobileScreen)) {
+      .listing-image-wrapper {
+        justify-content: center;
+        margin-left: 0;
+      }
+    }
   }
 
   .listing-item a {
@@ -245,6 +285,17 @@ ul.person-social {
 
   .listing-item.too-many-speakers a {
     flex-direction: column;
+
+    .listing-image-wrapper {
+      justify-content: center;
+      margin-left: 0;
+    }
+
+    @media only screen and (max-width: (@largestMobileScreen)) {
+      .listing-image-wrapper {
+        flex-wrap: wrap;
+      }
+    }
   }
 }
 
@@ -256,6 +307,83 @@ ul.person-social {
       justify-content: center;
     }
   }
+}
+
+@media only screen and (max-width: (@largestMobileScreen)) {
+  .logo {
+    width: 250px;
+  }
+}
+
+// Mobile Sliding menu
+@media only screen and (max-width: (@largestMobileScreen)) {
+  .sticky-inner-wrapper {
+    position: static !important;
+    width: auto !important;
+    transform: none !important;
+  }
+}
+
+.hamburger-wrapper {
+  position: relative;
+  z-index: 10001;
+  margin-left: 10px;
+}
+
+.hamburger-inner {
+  background-color: white !important;
+
+  &::after,
+  &::before {
+    background-color: white !important;
+  }
+}
+
+.mobile-menu-nav {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+
+  a {
+    color: rgba(255, 255, 255, 0.5);
+  }
+}
+
+.mobile-menu {
+  padding-top: 60px; // the mobile-header height
+  background-color: #0083be;
+}
+
+.mobile-menu-enter {
+  .mobile-menu;
+
+  transform: translate(0%, -100%);
+}
+
+.mobile-menu-enter.mobile-menu-enter-active {
+  .mobile-menu;
+
+  transform: translate(0%, 0%);
+  transition: transform 0.5s cubic-bezier(0.09, 0.11, 0.24, 0.91);
+}
+
+.mobile-menu-enter-done {
+  .mobile-menu;
+}
+
+.mobile-menu-exit {
+  .mobile-menu;
+
+  transform: translate(0%, 0%);
+  transition: transform 0.5s cubic-bezier(0.09, 0.11, 0.24, 0.91);
+}
+
+.mobile-menu-exit.mobile-menu-exit-active {
+  .mobile-menu;
+
+  transform: translate(0%, -100%);
+  transition: transform 0.5s cubic-bezier(0.09, 0.11, 0.24, 0.91);
 }
 
 @import 'tito';
