Adapt CTA components, add theming

--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/CTA.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/CTA.less
@@ -15,7 +15,8 @@ CTA
   }
 
   .ui.button.cta {
-    background-color: @ploneBlue;
-    color: @white;
+    background-color: @secondaryColor;
+    color: @black;
+    border-radius: 0;
   }
 }
