Add mixin for card css

--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/HeroImage.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/HeroImage.less
@@ -12,11 +12,9 @@
     gap: 2rem;
 
     .hero-body{
-      background-color: @lightColor;
-      box-shadow: 0px 3px 6px hsla(0,0,0,0.1);
-      padding-top: 4rem;
-      padding-left: 3rem;
-      padding-right: 3rem;
+
+      .card();
+
       .title{
         text-transform: uppercase;
         margin-bottom: 2rem;
