Update OSS level style on Sponsors block

--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/Sponsors.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/Sponsors.less
@@ -63,6 +63,13 @@ Sponsors
       }
     }
 
+    &.oss {
+      img {
+        max-width: 90px;
+        max-height: 90px;
+      }
+    }
+
     &.organizer {
       img {
         max-width: 300px;
