--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/logo.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/logo.less
@@ -18,7 +18,7 @@
   
  .siteroot{
     #page-document{
-        & > .block.image{
+        .block.image:first-child{
             position: relative;
             z-index: 10;
             margin-top: -60px;
