--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/countdown.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/countdown.less
@@ -1,7 +1,10 @@
-.countdown {
+#main .countdown {
     text-align: center;
     display: flex;
-
+    
+    @media (max-width: @computerBreakpoint) {
+        flex-direction: column;
+    }
 
     aside {
         display        : grid;
@@ -11,124 +14,72 @@
         h3 {
             font-family  : @secondaryFont;
             color        : @lightColor;
-            font-size    : 3.5rem;
+
+            font-size    : 2.5rem;
+            
             margin-bottom: 3rem;
         }
 
+        button i{
+            margin-left: 0.3rem;
+            transform: rotate(17deg);
+        }
         
     }
 
     article {
         color  : @primaryColor;
-        padding: 7rem;
-        background-color: @lightColor;
+        display: grid;
+        justify-content: center;
+        .card();
 
         .subtitle {
             font-weight  : lighter;
-            font-size    : 4rem;
+            font-size: clamp(2rem,10vw, 5rem );
+            @media (min-width:@tabletBreakpoint){
+                font-size: 5rem;
+            }
             margin-bottom: 1rem;
         }
 
         h2 {
-            font-size: 5rem;
+            font-size: clamp(2rem,10vw, 5rem );
+            @media (min-width:@tabletBreakpoint){
+                font-size: 5rem;
+            }
+            width: 100%;
             color    : @primaryColor;
         }
 
         .timer {
             display              : grid;
-            grid-template-columns: repeat(4, 11rem);
+            grid-template-columns: repeat(4, 7rem);
+            @media (max-width:600px){
+                grid-template-columns: repeat(2, 7rem);
+                row-gap: 2rem;
+            }
             grid-template-rows   : auto auto;
             grid-gap             : 1rem;
-            margin               : 5rem auto 0 auto;
+            margin               : 3rem auto 0 auto;
 
-            div {
+            div div{
                 background-color: @secondaryColor;
                 color           : @darkColor;
                 font-family     : @secondaryFont;
                 text-transform  : uppercase;
-                margin          : 0 0.5rem;
             }
 
             [class$="-n"] {
-                font-size: 3.5rem;
-                padding  : 2rem 0;
+                font-size: 2rem;
+                padding  : 1rem 0;
+                margin-bottom: 1rem;
             }
 
             [class$="-b"] {
-                font-size: 1.6rem;
-                padding: 1rem 0.5rem; 
-            }
-
-            .days-n {
-                grid-column: 1;
-                grid-row   : 1;
-            }
-
-            .days-b {
-                grid-column: 1;
-                grid-row   : 2;
-            }
-
-            .hours-n {
-                grid-column: 2;
-                grid-row   : 1;
-            }
-
-            .hours-b {
-                grid-column: 2;
-                grid-row   : 2;
-            }
-
-            .minutes-n {
-                grid-column: 3;
-                grid-row   : 1;
-            }
-
-            .minutes-b {
-                grid-column: 3;
-                grid-row   : 2;
-            }
-
-            .seconds-n {
-                grid-column: 4;
-                grid-row   : 1;
-            }
-
-            .seconds-b {
-                grid-column: 4;
-                grid-row   : 2;
+                font-size: 1rem;
+                padding: .5rem 0; 
             }
         }
-    }
-}
 
-@media (max-width: 1400px) {
-    .countdown {
-        aside h3 {
-            font-size: 3rem;
-        }
-
-        article {
-            padding: 4rem 2rem;
-
-            .subtitle {
-                font-size    : 4rem;
-                margin-bottom: 0;
-            }
-
-            h2 {
-                font-size: 5rem;
-            }
-
-            .timer {
-                [class$="-n"] {
-                    font-size: 3rem;
-                }
-
-                [class$="-b"] {
-                    font-size: 1.2rem;
-                }
-            }
-        }
     }
 }
