Fix typo uppercase

--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/countdown.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/countdown.less
@@ -34,18 +34,21 @@
         .card();
 
         .subtitle {
+            text-transform: uppercase;
             font-weight  : lighter;
-            font-size: clamp(2rem,10vw, 5rem );
+            font-size: clamp(2rem,10vw, 3rem );
             @media (min-width:@tabletBreakpoint){
-                font-size: 5rem;
+                font-size: 3rem;
             }
             margin-bottom: 1rem;
         }
 
         h2 {
-            font-size: clamp(2rem,10vw, 5rem );
+            text-transform: uppercase;
+
+            font-size: clamp(2rem,10vw, 4rem );
             @media (min-width:@tabletBreakpoint){
-                font-size: 5rem;
+                font-size: 4rem;
             }
             width: 100%;
             color    : @primaryColor;
