--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/logo.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/logo.less
@@ -22,6 +22,7 @@
             position: relative;
             z-index: 10;
             margin-top: -60px;
+            pointer-events: none;
             @media screen and (min-width:1071px){
                 text-align: left;
                 left: 170px;
