--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/HeroImage.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/HeroImage.less
@@ -1,4 +1,4 @@
-.block.hero{
+#main .block.hero{
   .block-inner-wrapper{
     display: grid;
     @media (min-width: @computerBreakpoint){
@@ -29,6 +29,9 @@
       .sub-title{
         font-weight: bold;
         margin-bottom: 0.8rem;
+      }
+      .ctaContainer button i.icon{
+        transform: rotate(-25deg);
       }
     }
     .hero-image{
