--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/Sponsors.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/Sponsors.less
@@ -1,7 +1,7 @@
 /*-------------------
 Sponsors
 --------------------*/
-#main .ui.container.sponsors {
+#main .sponsors {
   margin-top: 30px;
   display: grid;
   gap: 2rem;
