--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/countdown.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/countdown.less
@@ -1,9 +1,10 @@
 #main .countdown {
     text-align: center;
-    display: flex;
-    
-    @media (max-width: @computerBreakpoint) {
-        flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr minmax(var(--aside-column-width), 1fr);
+
+    @media (max-width: @largeMonitorBreakpoint) {
+        grid-template-columns: 1fr;
     }
 
     aside {
