--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/HeroImage.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/HeroImage.less
@@ -1,16 +1,19 @@
 #main .block.hero{
   .block-inner-wrapper{
     display: grid;
+    gap: 2rem;
+
     @media (min-width: @computerBreakpoint){
       &.right{
-        grid-template-columns: minmax(var(--image-width), 1fr) 1fr;
+        grid-template-columns: minmax(var(--aside-column-width), 1fr) 1fr;
       }
       &.left{
-        grid-template-columns: 1fr minmax(var(--image-width), 1fr);
+        grid-template-columns: 1fr minmax(var(--aside-column-width), 1fr);
       }
+      grid-template-columns: minmax(var(--aside-column-width), 1fr) 1fr;
     }
     
-    gap: 2rem;
+
 
     .hero-body{
 
@@ -32,9 +35,14 @@
         transform: rotate(-25deg);
       }
     }
+    .wrapper-aside{
+      @media (max-width: @computerBreakpoint){
+        grid-row: ~"1 / 2";
+      }
+    }
     .hero-image{
-      max-width: 100%;
-      width: 100%;
+      min-width: 100%;
+      min-height: 100%;
       object-fit: cover;
       height: auto;
     }
