--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/mixins.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/mixins.less
@@ -1,8 +1,14 @@
 .card(){
   background-color: @lightColor;
   box-shadow: 0px 3px 6px hsla(0,0,0,0.1);
+  @media (max-width:@tabletBreakpoint){
+    padding-top: 3rem !important;
+    padding-right: 2rem !important;
+    padding-bottom: 2rem !important;
+    padding-left: 2rem !important;
+  }
   padding-top: 4rem;
-  padding-left: 3rem;
   padding-right: 3rem;
   padding-bottom: 3rem;
+  padding-left: 3rem;
 }
