Fix size probleme in edit mode

--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/countdown.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/countdown.less
@@ -1,6 +1,7 @@
-#main .countdown {
+#main .countdown .countdown-inner-wrapper{
     text-align: center;
     display: grid;
+
     grid-template-columns: 1fr minmax(var(--aside-column-width), 1fr);
 
     @media (max-width: @largeMonitorBreakpoint) {
