--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/listingNews.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/listingNews.less
@@ -1,4 +1,4 @@
-.block.listing.news{
+.block.listing{
 
   .news-list{
     display: grid;
@@ -10,15 +10,32 @@
   .news-listing{
     display: grid;
     gap: 2rem;
-
+    
+    
     .news-body{
       display: flex;
       gap: 1rem;
+      
+      @media (max-width:@tabletBreakpoint){
+        flex-direction: column;
+      }
+
       .card();
 
       .news-title{
         font-size: 2rem;
         margin-bottom: 1rem;
+        line-height: 2rem;
+      }
+      .news-image{
+        img{
+          height: 200px;
+          width: 200px;
+          object-fit: cover;
+          @media (max-width:@tabletBreakpoint){
+            width: 100%;
+          }
+        }
       }
     }
   }
