Add plone logo, remove anchor underline, add and move links in footer

--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/footer.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/footer.less
@@ -16,6 +16,9 @@
       margin-top: 50px;
     }
 
+    a{
+      text-decoration: none;
+    }
     
     .text{
       background-color: @primaryColor;
@@ -24,6 +27,10 @@
       margin: 0;
       @media (max-width:@tabletBreakpoint){
         text-align: center;
+        .plone-logo{
+          display: grid;
+          place-content: center;
+        }
       }
     }
     
