Change news card to be a link

--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/listingNews.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/listingNews.less
@@ -12,6 +12,7 @@
 
     .news-body {
       display: flex;
+      color: @darkColor;
       gap: 1rem;
 
       @media (max-width: @tabletBreakpoint) {
