--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/CTA.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/CTA.less
@@ -3,36 +3,37 @@ CTA
 --------------------*/
 #main .ctaContainer {
   text-align: center;
-  
-  @media (min-width: @tabletBreakpoint) { 
+
+  @media (min-width: @tabletBreakpoint) {
     &.left,
-    &.mid-left{
+    &.mid-left {
       text-align: left;
     }
+
     &.right,
     &.mid-right {
       text-align: right;
     }
   }
-  @media (min-width: @computerBreakpoint)
-  {
-    &.mid-left{
+  @media (min-width: @computerBreakpoint) {
+    &.mid-left {
       transform: translateX(130px);
     }
-    &.mid-right{
+
+    &.mid-right {
       transform: translateX(-160px);
     }
   }
 
   .ui.button.cta {
-    background-color: @secondaryColor;
-    color: @black;
-    border-radius: 0;
     margin: 0;
+    background-color: @secondaryColor;
+    border-radius: 0;
+    color: @black;
 
-    i.icon{
-        margin-left: 0.3rem;
-        transform: rotate(17deg);
+    i.icon {
+      margin-left: 0.3rem;
+      transform: rotate(17deg);
     }
   }
 }
