--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/logo.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/logo.less
@@ -1,33 +1,35 @@
-.siteroot .header .logo-nav-wrapper .logo{
-    position: relative;
-    .mask-logo{
-        background: @pageBackground;
-        position: absolute;
-        z-index: 1;
-        left: 0;
-        right: 0;
-        transition: all .4s ease;
-        &-initial{
-            height: 100%;
-        }
-        &-sticky{
-            height: 0;
-        }
+.siteroot .header .logo-nav-wrapper .logo {
+  position: relative;
+
+  .mask-logo {
+    position: absolute;
+    z-index: 1;
+    right: 0;
+    left: 0;
+    background: @pageBackground;
+    transition: all 0.4s ease;
+
+    &-initial {
+      height: 100%;
     }
- }
-  
- .siteroot{
-    #page-document{
-        .block.image:first-child{
-            position: relative;
-            z-index: 10;
-            margin-top: -60px;
-            pointer-events: none;
-            @media screen and (min-width:1071px){
-                text-align: left;
-                left: 170px;
-            }
-        }
+
+    &-sticky {
+      height: 0;
     }
- }
- 
+  }
+}
+
+.siteroot {
+  #page-document {
+    .block.image:first-child {
+      position: relative;
+      z-index: 10;
+      margin-top: -60px;
+      pointer-events: none;
+      @media screen and (min-width: 1071px) {
+        left: 170px;
+        text-align: left;
+      }
+    }
+  }
+}
