--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/mixins.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/mixins.less
@@ -1,14 +1,17 @@
+:root {
+  --card-padding-top: 4rem;
+  --card-padding: 3rem;
+}
+
 .card() {
-  padding-top: 4rem;
-  padding-right: 3rem;
-  padding-bottom: 3rem;
-  padding-left: 3rem;
+  padding-top: var(--card-padding-top);
+  padding-right: var(--card-padding);
+  padding-bottom: var(--card-padding);
+  padding-left: var(--card-padding);
   background-color: @lightColor;
   box-shadow: 0px 3px 6px hsla(0, 0, 0, 0.1);
   @media (max-width: @tabletBreakpoint) {
-    padding-top: 3rem !important;
-    padding-right: 2rem !important;
-    padding-bottom: 2rem !important;
-    padding-left: 2rem !important;
+    --card-padding-top: 3rem;
+    --card-padding: 2rem;
   }
 }
