--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/logo.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/logo.less
@@ -26,7 +26,7 @@
       z-index: 10;
       margin-top: -60px;
       pointer-events: none;
-      @media screen and (min-width: 1071px) {
+      @media screen and (min-width: @computerBreakpoint) {
         left: 170px;
         text-align: left;
       }
