Fix countdown repsonsive

--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/countdown.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/countdown.less
@@ -4,7 +4,7 @@
   grid-template-columns: 1fr minmax(var(--aside-column-width), 1fr);
   text-align: center;
 
-  @media (max-width: @largeMonitorBreakpoint) {
+  @media (max-width: @computerBreakpoint) {
     grid-template-columns: 1fr;
   }
 
@@ -14,6 +14,7 @@
     place-content: center;
 
     h3 {
+
       margin-bottom: 3rem;
       color: @lightColor;
       font-family: @secondaryFont;
