--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/listingNews.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/listingNews.less
@@ -1,9 +1,11 @@
 .block.listing {
-  padding-top: 2rem;;
-  .wrapper-aside.text{
-    h2{
+  padding-top: 2rem;
+
+  .wrapper-aside.text {
+    h2 {
       margin: 0;
-      a{
+
+      a {
         color: #ffffff;
       }
     }
@@ -49,16 +51,17 @@
       }
     }
   }
-  .news-more{
-    text-align: right;
+
+  .news-more {
     width: 100%;
-    grid-column: -2 / -1;
     margin-top: 1rem;
     margin-bottom: 2rem;
+    grid-column: -2 / -1;
+    text-align: right;
     @media (max-width: @computerBreakpoint) {
-      color : #ffffff;
       display: block;
       padding-right: 0.5rem;
+      color: #ffffff;
     }
   }
 }
