--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/talk.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/talk.less
@@ -1,28 +1,34 @@
-.talk-view{
-  .talk-header{
+.talk-view {
+  .talk-header {
     display: flex;
     flex-direction: row;
-    .talk-content{
+
+    .talk-content {
       margin-bottom: 2rem;
     }
-    .speaker-image-wrapper{
+
+    .speaker-image-wrapper {
       display: flex;
       flex-direction: column;
-      .listing-item, .listing-item a{
+
+      .listing-item,
+      .listing-item a {
         width: fit-content;
       }
     }
   }
-  &.too-many-speakers .talk-header{
+
+  &.too-many-speakers .talk-header {
     flex-direction: column;
-    .speaker-image-wrapper{
-      flex-wrap: wrap;
+
+    .speaker-image-wrapper {
       flex-direction: row;
-      img{
+      flex-wrap: wrap;
+
+      img {
         width: 150px;
         height: 150px;
       }
     }
   }
-  
 }
