--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/talk.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/talk.less
@@ -2,14 +2,23 @@
   .talk-header {
     display: flex;
     flex-direction: row;
+    @media screen and (max-width: @tabletBreakpoint) {
+      flex-direction: column;
+    }
 
     .talk-content {
+      flex-grow: 1;
       margin-bottom: 2rem;
     }
 
     .speaker-image-wrapper {
       display: flex;
       flex-direction: column;
+      gap: 0.5rem;
+      @media screen and (max-width: @tabletBreakpoint) {
+        flex-direction: row;
+        flex-wrap: wrap;
+      }
 
       .listing-item,
       .listing-item a {
