Add Schedule Block

--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/listingTalk.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/listingTalk.less
@@ -1,6 +1,10 @@
 .talks-listing {
   .listing-item a {
     gap: 1rem;
+
+    .listing-body {
+      flex-grow: 1;
+    }
   }
 
   .listing-image-wrapper {
