Fix image size in newsList

--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/listingNews.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/listingNews.less
@@ -42,7 +42,7 @@
       .news-image {
         img {
           width: 200px;
-          height: 200px;
+          max-width: 200px;
           object-fit: cover;
           @media (max-width: @tabletBreakpoint) {
             width: 100%;
