--- a/frontend/src/addons/volto-conf2022-theme/theme/extras/Sponsors.less
+++ b/frontend/src/addons/volto-conf2022-theme/theme/extras/Sponsors.less
@@ -34,7 +34,7 @@ Sponsors
       display: flex;
       flex-wrap: wrap;
       align-content: center;
-      justify-content: start;
+      justify-content: flex-start;
       @media (max-width: @tabletBreakpoint) {
         justify-content: center;
       }
